--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,12 @@ cmake_minimum_required(VERSION 3.3)
 
 project(Joynet)
 
-set(COMMON_COMPILE_FLAGS "-g -Wall -Wno-long-long -Werror -D_NEW_LIC -D_GNU_SOURCE -D_REENTRANT -fPIC -D__STDC_FORMAT_MACROS -DSVR_ONLY")
-set(STRICT_COMPILE_FLAGS "${COMMON_COMPILE_FLAGS} -DDEV_BUILD")
-set(CMAKE_CXX_FLAGS ${STRICT_COMPILE_FLAGS})
+SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
+SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 
-add_executable(joyclient joyclient.c joynet.c)
-add_executable(joyserver joyserver.c joynet.c)
+#message(STATUS "source dir: ${CMAKE_SOURCE_DIR}")
+#message(STATUS "complie flags: ${STRICT_COMPILE_FLAGS}")
+
+add_executable(client joyclient.c joynet.c)
+add_executable(server joyserver.c joynet.c)
